deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx-space
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      name: nginx-dep-pod
      labels: 
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest    
        ports:
        - containerPort: 80
